#632: Address URL constructor deprecation with Java 21.